k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digitrans-cm
  labels:
    app: digitrans-cm
