k8s/service-erp.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-service
  labels:
    app: erp-service
spec:
  type: ClusterIP
  selector:
    app: erp-service
  ports:
    - port: 8081
      targetPort: 8081
      name: http
