k8s/service-supply.yaml
apiVersion: v1
kind: Service
metadata:
  name: supply-chain-service
  labels:
    app: supply-chain-service
spec:
  type: ClusterIP
  selector:
    app: supply-chain-service
  ports:
    - port: 8083
      targetPort: 8083
      name: http
