k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digitrans-app
  labels:
    app: digitrans-cm
spec:
  type: ClusterIP
  selector:
    app: digitrans-cm
  ports:
    - port: 8081
      targetPort: 8081
      name: http
