k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digitrans-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.digitrans-cm.camtech.cm
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: digitrans-app
                port:
                  name: http
